@@ -6,6 +6,8 @@
   when switching between software<->OpenGL in Windows - now it always
   reinitialises the video subsystem. The previous solution would later cause
   glitches when rapidly resizing the OpenGL window.
+* src/sdl/main.c, src/sdl/input.c: Delay processing of repeated window resize
+  requests on Windows to avoid a bug in SDL.
 
 2011-04-18  Tomasz Krasuski <kr0tki@poczta.onet.pl>
 * src/ui_basic.c: Fix divsion by 0 in the slider control.
